@@ -1,8 +1,11 @@
-<!-- Automagically generated by the ToDo program on 2005-04-28 -->
+<!-- Automagically generated by the ToDo program on 04/28/05, 11:04 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
+    <note priority="veryhigh" time="1114700672">
+        Use value_type, etc everywhere we can.
+    </note>
     <note priority="high" time="1114076893">
         Update package handler to search overlays too?
     </note>
